db.yaml
apiVersion: v1
kind: Service
metadata:
  name: magento-db
spec:
  ports:
  - port: 3306
  selector:
    app: magento-db
  clusterIP: None
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: magento-db
spec:
  selector:
    matchLabels:
      app: magento-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: magento-db
    spec:
      containers:
      - image: mysql:5.6
        name: magento-db
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: magento-db-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: magento-db-persistent-storage
        persistentVolumeClaim:
          claimName: magento-db-pvc
