manifest.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  labels:
    app: myapp
spec:
  ports:
    - port: 80
  selector:
    app: myapp
    tier: frontend
  type: LoadBalancer
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: myapp
  labels:
    app: myapp
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: myapp
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: myapp
        tier: frontend
    spec:
      containers:
      - image: akril/magento:empty
        name: myapp
        ports:
        - containerPort: 80
          name: myapp
        volumeMounts:
        - name: host-mount
          mountPath: /app/src/magento2ce
        imagePullPolicy: Never
#        lifecycle:
#          postStart:
#            exec:
#              command: ["/bin/sh", "-c", "/app/bin/magento setup:install --backend-frontname=admin --db-host=172.17.0.7 --db-name=magento --db-user=root --db-password=password --admin-firstname=Anton --admin-lastname=Kril --admin-email=akril@magento.com --admin-user=admin --admin-password=123123q"]
      volumes:
      - name: host-mount
        hostPath:
          path: /synced
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  ports:
  - port: 3306
  selector:
    app: mysql
  clusterIP: None
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: mysql:5.6
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
